trying to fix formatting on ios

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -129,8 +129,6 @@ h1{
     font-weight: 800;
     font-style: normal;
     font-size: 40px;
-    position: relative;
-    top: 76%;
 }
 
 h2{
